--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "electron-render-service",
-  "version": "0.11.0",
+  "version": "0.11.1",
   "description": "Microservice for rendering PDF/PNG/JPEG from HTML with Electron",
   "bin": {
     "electron-render-service": "./bin/electron-render-service.js"
+  },
+  "engine": {
+    "node": "^8"
   },
   "scripts": {
     "start": "electron src/server.js",
