--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
   "name": "electron-render-service",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Microservice for rendering PDF/PNG/JPEG from HTML with Electron",
-  "bin": {
-    "electron-render-service": "./bin/electron-render-service.js"
-  },
-  "engine": {
-    "node": "^8"
-  },
-  "scripts": {
-    "start": "electron src/server.js",
-    "lint": "eslint src",
-    "test": "electron node_modules/.bin/_mocha --exit"
-  },
-  "keywords": [
-    "electron",
-    "render",
-    "pdf",
-    "png",
-    "jpeg",
-    "jpg",
-    "html",
-    "microservice"
-  ],
-  "author": "Mihkel Sokk <mihkelsokk@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/msokk/electron-render-service.git"
+    "url": "https://github.com/kingsquare/electron-render-service.git"
+  },
+  "engine": {
+    "node": "^14"
+  },
+  "scripts": {
+    "start": "DEBUG=\"*\" pm2 start --no-daemon /app/bin/start.sh",
+    "dev": "electron src/server.js",
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
+    "test": "electron node_modules/.bin/_mocha --exit"
+  },
+  "bin": {
+    "electron-render-service": "./bin/electron-render-service.js"
   },
   "dependencies": {
-    "async": "^2.6.0",
-    "electron": "^1.7.12",
-    "express": "^4.16.2",
-    "express-validator": "^4.3.0",
-    "morgan": "^1.9.0",
+    "async": "^3.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "morgan": "^1.10.0",
+    "pm2": "^4.4.1",
     "response-time": "^2.3.2",
-    "retry": "^0.10.1"
+    "retry": "^0.12.0"
   },
   "devDependencies": {
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "electron": "^10.1.1",
+    "eslint": "^6.8.0",
+    "eslint-config-kingsquare": "^6.0.4",
     "mocha": "^5.0.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "typescript": "^3.9.4"
+  },
+  "eslintIgnore": [],
+  "eslintConfig": {
+    "extends": "kingsquare",
+    "env": {
+      "node": true,
+      "mocha": true
+    },
+    "settings": {
+      "react": {
+        "version": "latest"
+      }
+    }
   }
 }
