--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-render-service": "./bin/electron-render-service.js"
   },
   "dependencies": {
+    "@sentry/electron": "^2.0.0",
     "async": "^3.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
